--- a/assets/css/helpers.css
+++ b/assets/css/helpers.css
@@ -1,7 +1,31 @@
+/* Flex */
+
 .flex{
     display: flex;
+}
+.wrap{
+    flex-wrap: wrap;
 }
 
 .justify-center{
     justify-content: center;
 }
+
+.align-flex-start{
+    align-items: flex-start;
+}
+
+.flex-grow{
+    flex-grow:1;
+}
+
+
+
+/* List */
+
+.clean-list{
+    margin:0;
+    padding: 0;
+    list-style-type: none;
+}
+
