--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,3 +8,8 @@ body{
     font-family: Arial, Helvetica, sans-serif;
 }
 
+.nav-bar{
+    background-color: rgb(255, 187, 0);
+    padding: 20px 0;
+    margin: 0;
+}
