--- a/assets/css/email.css
+++ b/assets/css/email.css
@@ -1,9 +1,3 @@
-.em-preview-subject {
-  text-align: center;
-  width: 170px;
-  font-size: 1.1rem;
-}
-
 h2 {
   font-weight: unset;
 }
@@ -17,37 +11,88 @@ h2 {
 }
 
 .email-app {
-  background-color: rgb(221, 221, 221);
-  height: 100vh;
+  background-color: rgb(243, 243, 243);
+  flex: 1;
+  color: #1f1f1f;
 }
 
 .email-list {
+  margin-top: 50px;
   background-color: white;
-  width: 550px;
+  width: 400px;
 }
 
 .email-item {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  padding: 10px;
+  /* position: relative;
   padding: 0 20px;
-  border-bottom: 1px solid rgb(185, 185, 185);
+  height: 50px;
+  align-items: center; */
+  border-bottom: 1px solid rgb(228, 227, 227);
+  white-space: nowrap;
+  overflow: hidden;
+}
+
+.read-toggle-btn {
+  background-image: url(../img/email/envelope-readed.svg);
+  background-repeat: no-repeat;
+  height: 15px;
+  width: 15px;
+  justify-self: end;
+  text-align: end;
+  /* position: absolute;
+  right: 5px; */
+  margin: 10px;
+  grid-area: 1/2;
+  text-align: end;
+}
+
+.email-details-container {
+  margin-top: 50px;
+  position: relative;
+  flex: 1;
+  background-color: #fff;
+  border-left: 1px solid rgb(228, 227, 227);
+}
+
+.rubbish-bin-btn {
+  width: 25px;
+  height: 25px;
+  border: none;
+  background-image: url(../img/email/rubbish-bin.svg);
+  background-repeat: no-repeat;
+  background-size: 25px;
+  position: absolute;
+  right: 60px;
+  top: 10px;
+}
+
+.reply-btn {
+  width: 25px;
+  height: 25px;
+  border: none;
+  background-image: url(../img/email/reply.svg);
+  background-repeat: no-repeat;
+  background-size: 25px;
+  position: absolute;
+  right: 10px;
+  top: 10px;
 }
 
 .email-details {
   height: 100vh;
   padding: 10px;
-  width: 100%;
+  flex: 1;
   background-color: #fff;
-  border-left: 1px solid rgb(185, 185, 185);
-}
-
-.sideBar {
-  width: 120px;
-  padding: 0 15px;
 }
 
 .compose-email {
   width: 500px;
   display: flex;
   flex-direction: column;
+  z-index: 10;
   position: fixed;
   bottom: 0;
   right: 0;
@@ -76,6 +121,75 @@ textarea {
   border: none;
 }
 
-.filter-select{
+.filter-select {
   height: 25px;
+}
+
+.side-bar {
+  width: 165px;
+}
+
+.compose-item {
+  border: 1px solid rgb(206, 205, 205);
+  width: 250px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  text-align: center;
+  border-radius: 20px;
+  font-size: 1.3rem;
+  padding: 5px;
+  width: 100px;
+  cursor: pointer;
+}
+
+.email-input-search {
+  width: 100px;
+  height: 30px;
+  font-size: 0.9rem;
+  border: none;
+  width: 115px;
+  margin: 15px;
+  border-radius: 5px;
+  padding-left: 10px;
+}
+
+.side-nav-item {
+  text-align: center;
+  padding: 10px;
+  border-bottom: 1px solid rgb(233, 232, 232);
+}
+
+.preview-sender-name {
+  margin: 5px 0;
+  padding: 0;
+  min-width: 90px;
+  font-size: 1rem;
+}
+
+.preview-subject {
+  margin: 5px 0;
+  padding: 0;
+  font-size: 1rem;
+  white-space: nowrap;
+  overflow: hidden;
+  color: #0078d6;
+}
+
+.preview-body {
+  margin: 5px 0;
+  padding: 0;
+  grid-column: span 2;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.preview-time {
+  margin: 5px 0;
+  padding: 0;
+  font-size: 0.9rem;
+  min-width: 114px;
+  text-align: end;
+  grid-area: 2/2;
+  /* position: absolute; */
+  right: 17px;
+  top: 3px;
 }
