--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,6 +8,10 @@ body{
     font-family: Arial, Helvetica, sans-serif;
 }
 
+main{
+    min-height: 100vh;
+}
+
 .nav-bar{
     background-color: rgb(255, 187, 0);
     padding: 20px 0;
