--- a/assets/css/helpers.css
+++ b/assets/css/helpers.css
@@ -50,6 +50,33 @@
     list-style-type: none;
 }
 
+.done{
+    text-decoration: line-through ;
+}
+
+/* colors */
+
+.black{
+    color:black !important;
+}
+
+
+.screen{
+    top:0;
+    left:0;
+    position: fixed;
+    width: 100%;
+    min-height: 100vh;
+    background-color: #ebebebce;
+    cursor: pointer;
+    transition: opacity .6s;
+    z-index:2;
+}
+
+/* over-flow */
+.over-flow{
+    overflow-y: scroll;
+}
 
 
 
