--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,7 +13,7 @@ main{
 }
 
 .nav-bar{
-    background-color: rgb(255, 187, 0);
+    background-color: #0078d6;
     padding: 20px 0;
     margin: 0;
 }
