--- a/assets/css/helpers.css
+++ b/assets/css/helpers.css
@@ -28,6 +28,10 @@
     justify-content: space-around;
 }
 
+.justify-space-evenly{
+    justify-content:space-evenly;
+}
+
 .align-flex-start {
     align-items: flex-start;
 }
