--- a/assets/css/helpers.css
+++ b/assets/css/helpers.css
@@ -32,6 +32,10 @@
     justify-content:space-evenly;
 }
 
+.justify-space-between{
+    justify-content: space-between;
+}
+
 .align-flex-start {
     align-items: flex-start;
 }
