--- a/assets/css/email.css
+++ b/assets/css/email.css
@@ -1,5 +1,6 @@
 h2 {
   font-weight: unset;
+  color: #2e2e2e;
 }
 
 p {
@@ -18,6 +19,10 @@ p {
   }
 }
 
+.container {
+  padding: 0 10px;
+}
+
 .email-app {
   opacity: 1;
   animation-name: fadeInOpacity;
@@ -26,7 +31,7 @@ p {
   animation-duration: .4s;
   background-color: rgb(243, 243, 243);
   flex: 1;
-  color: #1f1f1f;
+  color: #2e2e2e;
 }
 
 .email-list {
@@ -49,6 +54,10 @@ p {
   background-color: #0079d62a;
 }
 
+.active-list-item {
+  background-color: #0079d62a;
+}
+
 .display-toggle-btn {
   position: absolute;
   left: 10px;
@@ -65,8 +74,33 @@ p {
   font-size: 1.7rem;
 }
 
+.email-details {
+  /* height: 100vh; */
+  /* padding: 10px; */
+  flex: 1;
+  background-color: #fff;
+}
+
+.details-content {
+  padding: 0 10px;
+}
+
+.details-address {
+  padding-left: 10px;
+  color: rgba(128, 128, 128, 0.63);
+}
+
+.details-time {
+  color: grey;
+}
+
+.details-name {
+  font-size: 1.2rem;
+}
+
 .email-details-container {
   opacity: 1;
+  height: 75vh;
   animation-name: fadeInOpacity;
   animation-iteration-count: 1;
   animation-timing-function: ease-in;
@@ -80,7 +114,7 @@ p {
 }
 
 .details-body {
-  margin: 20px 0;
+  margin: 60px 15px;
 }
 
 .active-side-item {
@@ -96,7 +130,7 @@ p {
   background-size: 20px;
   position: absolute;
   right: 45px;
-  top: 10px;
+  top: 85px;
   cursor: pointer;
 }
 
@@ -109,7 +143,7 @@ p {
   background-size: 20px;
   position: absolute;
   right: 10px;
-  top: 10px;
+  top: 85px;
   cursor: pointer;
 }
 
@@ -122,7 +156,7 @@ p {
   background-size: 20px;
   position: absolute;
   right: 80px;
-  top: 10px;
+  top: 85px;
   cursor: pointer;
 }
 
@@ -130,11 +164,16 @@ p {
   background-size: 21px;
 }
 
-.email-details {
-  height: 100vh;
-  padding: 10px;
-  flex: 1;
-  background-color: #fff;
+.details-title-container {
+  border-bottom: solid 1px rgb(228, 227, 227);
+  padding: 0 10px;
+  background-color: rgb(247, 247, 247);
+}
+
+.details-title {
+  margin: 0;
+  padding: 10px 0;
+  font-size: 1.3rem;
 }
 
 .hide-compose {
@@ -215,11 +254,22 @@ textarea {
   height: 25px;
 }
 
+.sort-by-title {
+  font-size: 1rem;
+  margin: 0;
+  padding: 14px 7px;
+}
+
+.sort-by-container {
+  position: relative;
+  border-bottom: solid 1px rgb(228, 227, 227);
+  background-color: rgb(247, 247, 247);
+}
+
 .side-bar {
   max-width: 165px;
   margin-top: 50px;
   transition: max-width 0.4s;
-  
 }
 
 .hide-side-bar {
@@ -430,4 +480,165 @@ textarea {
   background-repeat: no-repeat;
   display: block;
   width: 25px;
+}
+
+.onoffswitch {
+  position: absolute;
+  width: 85px;
+  display: inline-block;
+  font-size: 80%;
+}
+
+.onoffswitch .onoffswitch-label {
+  display: block;
+  overflow: hidden;
+  cursor: pointer;
+  border: 1px solid hsl(0, 0%, 90%);
+  -moz-border-radius: 20px;
+  -webkit-border-radius: 20px;
+  border-radius: 20px;
+  margin: 0;
+}
+
+.onoffswitch .onoffswitch-inner {
+  width: 200%;
+  margin-left: -100%;
+  -webkit-transition: margin 0.15s ease-in-out;
+  -o-transition: margin 0.15s ease-in-out;
+  -moz-transition: margin 0.15s ease-in-out;
+  transition: margin 0.15s ease-in-out;
+}
+
+.onoffswitch .onoffswitch-inner:before, .onoffswitch .onoffswitch-inner:after {
+  float: left;
+  width: 50%;
+  height: 24px;
+  padding: 0;
+  line-height: 24px;
+  font-size: 80%;
+  color: hsl(0, 0%, 100%);
+  font-weight: normal;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+.onoffswitch .onoffswitch-inner:before {
+  content: "Subject";
+  padding-left: 10px;
+  background-color: #0078d6;
+  color: hsl(0, 0%, 100%);
+}
+
+.onoffswitch .onoffswitch-inner:after {
+  content: "Date";
+  padding-right: 10px;
+  background-color: #0078d6;
+  color: hsl(0, 0%, 100%);
+  text-align: right;
+}
+
+.onoffswitch .onoffswitch-switch {
+  width: 22px;
+  height: 22px;
+  margin: 0;
+  background: hsl(0, 0%, 100%);
+  box-shadow: 0 0 3px rgba(0, 0, 0, 0.3);
+  -moz-border-radius: 50%;
+  -webkit-border-radius: 50%;
+  border-radius: 50%;
+  position: absolute;
+  top: 2px;
+  bottom: 0;
+  right: 65px;
+  -webkit-transition: right 0.15s ease-in-out;
+  -o-transition: right 0.15s ease-in-out;
+  -moz-transition: right 0.15s ease-in-out;
+  transition: right 0.15s ease-in-out;
+}
+
+.toggle-group {
+  position: absolute;
+  height: 27px;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  top: 50%;
+  left: 308px;
+  margin-top: -13.5px;
+}
+
+.toggle-group input[type=checkbox] {
+  position: absolute;
+  left: 10px;
+}
+
+.toggle-group input[type=checkbox]:checked~.onoffswitch .onoffswitch-label .onoffswitch-inner {
+  margin-left: 0;
+}
+
+.toggle-group input[type=checkbox]:checked~.onoffswitch .onoffswitch-label .onoffswitch-switch {
+  right: 1px;
+  box-shadow: 0 0 3px rgba(0, 0, 0, 0.5);
+}
+
+.toggle-group input[type=checkbox]:focus~.onoffswitch {
+  outline: thin dotted #333;
+  outline: 0;
+}
+
+.toggle-group label {
+  position: absolute;
+  cursor: pointer;
+  padding-left: 65px;
+  display: inline-block;
+  text-align: left;
+  line-height: 24px;
+  width: 100%;
+  z-index: 1;
+  height: 24px;
+  font-weight: 200;
+}
+
+/* .aural {
+  clip: rect(1px, 1px, 1px, 1px);
+  height: 1px;
+  overflow: hidden;
+  position: absolute;
+  width: 1px;
+} */
+
+.aural:focus {
+  clip: rect(0, 0, 0, 0);
+  font-size: 1em;
+  height: auto;
+  outline: thin dotted;
+  /* position: static !important; */
+  width: auto;
+  overflow: visible;
+}
+
+@media (max-width: 950px) {
+  .email-list {
+    width: 300px;
+  }
+  .sort-by-container {
+    width: 300px;
+  }
+  .toggle-group {
+    left: 208px;
+  }
+
+  .details-address {
+    margin-top: 80px;
+  }
+
+  .preview-body{
+    display: none;
+  }
+  /* .main-content{
+  flex-direction: column;
+}
+
+.email-details-container{
+  margin-top: 5px 0;
+} */
 }
