--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,17 +3,75 @@
 @import "email.css";
 @import "note.css";
 @import "setting.css";
-
-body{
+body {
     font-family: Arial, Helvetica, sans-serif;
 }
 
-main{
+main {
     min-height: 100vh;
 }
 
-.nav-bar{
+.nav-bar {
     background-color: #0078d6;
     padding: 20px 0;
     margin: 0;
+}
+
+.home-container {
+    height: calc(100vh - 58px);
+}
+
+.home-title {
+    margin: 0;
+    padding: 0;
+    position: absolute;
+    top: 50%;
+    transition: translateY(-50%);
+    width: 100%;
+    text-align: center;
+    color: #ddd;
+    font-size: 5rem;
+    letter-spacing: 0.8rem;
+}
+
+.home-title span {
+    display: inline-block;
+    animation: animate 1s linear forwards;
+}
+
+video {
+    object-fit: cover;
+}
+
+.home-title span:nth-child(1) {
+    animation-delay: 1s;
+}
+
+.home-title span:nth-child(2) {
+    animation-delay: 1.5s;
+}
+
+.home-title span:nth-child(3) {
+    animation-delay: 1.75s;
+}
+
+.home-title span:nth-child(4) {
+    animation-delay: 2s;
+}
+
+.home-title span:nth-child(5) {
+    animation-delay: 2.25s;
+}
+
+@keyframes animate {
+    0% {
+        opacity: 0;
+        transform: rotateY(90deg);
+        filter: blur(10px);
+    }
+    100% {
+        opacity: 1;
+        transform: rotateY(0deg);
+        filter: blur(0);
+    }
 }
