--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,10 +15,21 @@ main {
     background-color: #0078d6;
     padding: 20px 0;
     margin: 0;
+    color: #fff;
+}
+
+.footer {
+    height: 90px;
+    background-color: #0078d6;
+    color: #fff;
 }
 
 .home-container {
-    height: calc(100vh - 58px);
+    background-color: #000;
+}
+video {
+    object-fit: cover;
+    width: 100%;
 }
 
 .home-title {
@@ -39,9 +50,7 @@ main {
     animation: animate 1s linear forwards;
 }
 
-video {
-    object-fit: cover;
-}
+
 
 .home-title span:nth-child(1) {
     animation-delay: 1s;
