--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -72,6 +72,20 @@ video {
     animation-delay: 2.25s;
 }
 
+.userMsg {
+    background-color: white;
+    color: black;
+    height: 60px;
+    width: 350px;
+    position: absolute;
+    z-index: 10;
+    top: 25px;
+    right: 25px;
+    padding: 10px;
+    border-radius: 10px;
+    border: 5px solid #66cdaa
+}
+
 @keyframes animate {
     0% {
         opacity: 0;
