--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,7 +12,7 @@ main {
 }
 
 .nav-bar-container {
-    background-color: #66cdaa;
+    background-color: #f6fe88;
 }
 
 .nav-bar {
@@ -34,7 +34,7 @@ main {
 .footer {
     bottom: 0;
     height: 90px;
-    background-color: #66cdaa;
+    background-color: #f6fe88;
     color: #fff;
 }
 
@@ -97,6 +97,10 @@ video {
     padding: 10px;
     border-radius: 10px;
     border: 5px solid #66cdaa
+}
+
+.filter{
+    margin:0 auto;
 }
 
 @keyframes animate {
