--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,7 +12,7 @@ main {
 }
 
 .nav-bar-container {
-    background-color: #f6fe88;
+    background-color: #0078d6;
 }
 
 .nav-bar {
@@ -21,20 +21,23 @@ main {
     margin: 0;
     color: #fff;
 }
-.nav-bar>*{
-    margin-left:40px;
+
+.nav-bar>* {
+    margin-left: 40px;
 }
-.nav-bar>*:hover{
-    color:black;
+
+.nav-bar>*:hover {
+    color: black;
 }
-.active{
-    color:black;
+
+.active {
+    color: black;
 }
 
 .footer {
     bottom: 0;
     height: 90px;
-    background-color: #f6fe88;
+    background-color: #0078d6;
     color: #fff;
 }
 
@@ -99,12 +102,16 @@ video {
     border: 5px solid #66cdaa
 }
 
-.filter{
-    margin:0 auto;
-    border: none;
+.filter-container {
+    margin: 0 auto;
+}
+
+.filter {
+    width: 300px;
     height: 40px;
-    width: 290px;
+    border: none;
     padding-left: 10px;
+    border-radius: 5px;
 }
 
 @keyframes animate {
